<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/layoutParentButtons"
      android:layout_width="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_height="0dp"
      android:paddingTop="0dp"
      android:paddingBottom="8dp"
      android:paddingEnd="8dp"
      android:paddingStart="8dp">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewResult"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="1.0">

      <TextView
          android:id="@+id/textViewOperation"
          style="@style/CCalcTextViewOperation"/>
    </HorizontalScrollView>

    <TextView
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/textViewResult"
        style="@style/CCalcTextViewPreview"/>

    <Button
        android:id="@+id/buttonClear"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guidelineEnd"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonDivide"
        android:text="@string/c_calc_clear"
        android:textSize="18sp"
        android:textColor="@color/cCalColorOperationsButtonIcon"
        style="@style/CCalcButtonOperations"/>

    <ImageButton
        android:id="@+id/imageButtonDivide"
        app:layout_constraintStart_toEndOf="@+id/guidelineEnd"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonTimes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear"
        android:src="@drawable/c_calc_ic_divide"
        style="@style/CCalcButtonOperations"
        tools:ignore="ContentDescription"/>

    <Button
        android:id="@+id/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        style="@style/CCalcButtonNumbers"
        android:text="@string/c_calc_7"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"/>

    <Button
        android:id="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMiddle"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        style="@style/CCalcButtonNumbers"
        android:text="@string/c_calc_8"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"/>

    <Button
        android:id="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/guidelineMiddle"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        style="@style/CCalcButtonNumbers"
        android:text="@string/c_calc_9"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"/>

    <ImageButton
        android:id="@+id/imageButtonTimes"
        app:layout_constraintStart_toEndOf="@+id/guidelineEnd"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonDivide"
        android:src="@drawable/c_calc_ic_times"
        style="@style/CCalcButtonOperations"
        tools:ignore="ContentDescription"/>

    <Button
        android:id="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        style="@style/CCalcButtonNumbers"
        android:text="@string/c_calc_4"/>

    <Button
        android:id="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMiddle"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        style="@style/CCalcButtonNumbers"
        android:text="@string/c_calc_5"/>

    <Button
        android:id="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/guidelineMiddle"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        style="@style/CCalcButtonNumbers"
        android:text="@string/c_calc_6"/>

    <ImageButton
        android:id="@+id/imageButtonMinus"
        app:layout_constraintStart_toEndOf="@+id/guidelineEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonTimes"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonPlus"
        style="@style/CCalcButtonOperations"
        tools:ignore="ContentDescription"
        android:src="@drawable/c_calc_ic_minus"/>

    <Button
        android:id="@+id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        style="@style/CCalcButtonNumbers"
        app:layout_constraintBottom_toTopOf="@+id/buttonPoint"
        android:text="@string/c_calc_1"/>

    <Button
        android:id="@+id/button2"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMiddle"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        style="@style/CCalcButtonNumbers"
        android:text="@string/c_calc_2"/>

    <Button
        android:id="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/guidelineMiddle"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonEqual"
        style="@style/CCalcButtonNumbers"
        android:text="@string/c_calc_3"/>

    <ImageButton
        android:id="@+id/imageButtonPlus"
        app:layout_constraintStart_toEndOf="@+id/guidelineEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonMinus"
        tools:ignore="ContentDescription"
        android:src="@drawable/c_calc_ic_plus"
        style="@style/CCalcButtonOperations"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/buttonPoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:text="."
        style="@style/CCalcButtonNumbers"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMiddle"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:text="@string/c_calc_0"
        style="@style/CCalcButtonNumbers"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        app:layout_constraintStart_toEndOf="@+id/guidelineMiddle"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        android:id="@+id/imageButtonEqual"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/CCalcButtonEqual"
        tools:ignore="ContentDescription"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        android:layout_marginEnd="8dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.27"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.54"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>